--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -1,4 +1,15 @@
 .checkout__add {
-    width: 100%;
-    margin-bottom: 10px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+.checkout {
+  padding: 20px;
+  display: flex;
+  background-color: #fff;
+  height: max-content;
+}
+.checkout__title {
+  margin-right: 10px;
+  padding: 10px;
+  border-bottom: 1px solid lightgray;
 }
